# DyToK

./: .gitignore  README.md
eval/: pyproject.toml  requirements.txt
eval/lmms_eval/: __main__.py  evaluator.py
eval/lmms_eval/models/: __init__.py  llava_onevision_dytok.py
eval/lmms_eval/tasks/: __init__.py
eval/lmms_eval/tasks/mlvu/: utils.py
eval/scripts/: dytok_visionzip_tiny_32_ov.sh
playground/: llavaov_infer.py
